@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>io.mosip</groupId>
 		<artifactId>registration</artifactId>
-		<version>1.1.5</version>
+		<version>1.2.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.mosip.registrationprocessor</groupId>
 	<artifactId>registration-processor</artifactId>
-	<version>1.1.5</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>registration-processor</name>
@@ -25,10 +25,11 @@
 		<maven.compiler.version>3.8.0</maven.compiler.version>
 		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
 		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
-		<maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
-		<maven.jacoco.plugin.version>0.8.1</maven.jacoco.plugin.version>
+		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
+		<maven.jacoco.version>0.8.5</maven.jacoco.version>
 		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
 		<maven.javadoc.version>3.2.0</maven.javadoc.version>
+		<maven.assembly.version>3.3.0</maven.assembly.version>
 
 		<!-- Core -->
 		<spring-framework.version>5.0.6.RELEASE</spring-framework.version>
@@ -108,31 +109,33 @@
 		<jsch.version>0.1.55</jsch.version>
 
 		<!-- local -->
-		<registration.status.service.version>1.1.5</registration.status.service.version>
-		<registration.processor.core.version>1.1.5</registration.processor.core.version>
-		<packet.manager.version>1.1.5</packet.manager.version>
-		<registration.processor.rest.client.version>1.1.5</registration.processor.rest.client.version>
-		<packet.info.storage.service.version>1.1.5</packet.info.storage.service.version>
-		<packet.bio.dedupe.service.impl.version>1.1.5</packet.bio.dedupe.service.impl.version>
-		<registration.processor.message.sender.version>1.1.5</registration.processor.message.sender.version>
+		<registration.status.service.version>1.2.0-SNAPSHOT</registration.status.service.version>
+		<registration.processor.core.version>1.2.0-SNAPSHOT</registration.processor.core.version>
+		<packet.manager.version>1.2.0-SNAPSHOT</packet.manager.version>
+		<registration.processor.rest.client.version>1.2.0-SNAPSHOT</registration.processor.rest.client.version>
+		<packet.info.storage.service.version>1.2.0-SNAPSHOT</packet.info.storage.service.version>
+		<packet.bio.dedupe.service.impl.version>1.2.0-SNAPSHOT</packet.bio.dedupe.service.impl.version>
+		<registration.processor.message.sender.version>1.2.0-SNAPSHOT</registration.processor.message.sender.version>
 
 		<!-- Kernel -->
-		<kernel.core.version>1.1.5</kernel.core.version>
-		<kernel.dataaccess.hibernate.version>1.1.5</kernel.dataaccess.hibernate.version>
-		<kernel.templatemanager.velocity.version>1.1.5</kernel.templatemanager.velocity.version>
-		<kernel.idvalidator.uin.version>1.1.5</kernel.idvalidator.uin.version>
-		<kernel.idvalidator.rid.version>1.1.5</kernel.idvalidator.rid.version>
-		<kernel.clamav.version>1.1.3</kernel.clamav.version>
-		<kernel.cbeffutil.version>1.1.5</kernel.cbeffutil.version>
-        <kernel.bioapi.provider.version>1.1.5</kernel.bioapi.provider.version>
-        <kernel.auth.adapter.version>1.1.5</kernel.auth.adapter.version>
-        <kernel.pdfgenerator.itext.version>1.1.5</kernel.pdfgenerator.itext.version>
-		<kernel.qrcodegenerator.zxing.version>1.1.5</kernel.qrcodegenerator.zxing.version>
-		<kernel.logger.logback.version>1.1.5</kernel.logger.logback.version>
-		<kernel.idvalidator.vid.version>1.1.5</kernel.idvalidator.vid.version>
-		<object.store.khazana.version>1.1.5</object.store.khazana.version>
-		<kernel.biometrics.api.version>1.1.5</kernel.biometrics.api.version>
-		<kernel-keymanager-service.version>1.1.5</kernel-keymanager-service.version>
+		<kernel.core.version>1.1.7-SNAPSHOT</kernel.core.version>
+		<kernel.dataaccess.hibernate.version>1.2.0-SNAPSHOT</kernel.dataaccess.hibernate.version>
+		<kernel.templatemanager.velocity.version>1.2.0-SNAPSHOT</kernel.templatemanager.velocity.version>
+		<kernel.idvalidator.uin.version>1.2.0-SNAPSHOT</kernel.idvalidator.uin.version>
+		<kernel.idvalidator.rid.version>1.2.0-SNAPSHOT</kernel.idvalidator.rid.version>
+		<kernel.clamav.version>1.2.0-SNAPSHOT</kernel.clamav.version>
+		<kernel.cbeffutil.version>1.1.7-SNAPSHOT</kernel.cbeffutil.version>
+        <kernel.bioapi.provider.version>1.2.0-SNAPSHOT</kernel.bioapi.provider.version>
+        <kernel.auth.adapter.version>1.2.0-SNAPSHOT</kernel.auth.adapter.version>
+        <kernel.pdfgenerator.itext.version>1.2.0-SNAPSHOT</kernel.pdfgenerator.itext.version>
+		<kernel.qrcodegenerator.zxing.version>1.2.0-SNAPSHOT</kernel.qrcodegenerator.zxing.version>
+		<kernel.logger.logback.version>1.2.0-SNAPSHOT</kernel.logger.logback.version>
+		<kernel.idvalidator.vid.version>1.2.0-SNAPSHOT</kernel.idvalidator.vid.version>
+		<object.store.khazana.version>1.2.0-SNAPSHOT</object.store.khazana.version>
+		<kernel.biometrics.api.version>1.1.7-SNAPSHOT</kernel.biometrics.api.version>
+		<kernel-keymanager-service.version>1.2.0-SNAPSHOT</kernel-keymanager-service.version>
+		 <kernel.websubclient.version>1.2.0-SNAPSHOT</kernel.websubclient.version>
+		 <kernel-biosdk-provider.version>1.1.7-SNAPSHOT</kernel-biosdk-provider.version>
 			<sonar.coverage.exclusions>**/dto/**,
 			**/exception/*Exception.java,
 			**/config/*Config.java,
@@ -320,45 +323,47 @@
 		<module>registration-processor-registration-status-service-impl</module>
         <!-- <module>registration-processor-quality-checker</module> -->
 		<module>registration-processor-message-sender-impl</module>
+		<module>registration-processor-notification-service</module>
 		<module>init</module>
 		<module>pre-processor</module>
 		<module>core-processor</module>
 		<module>post-processor</module>
+		<module>mosip-stage-executor</module>
+		<module>stage-groups</module>
 	</modules>
-
-<!--	<profiles>
-		<profile>
-			<id>LOCAL</id>
-			<properties>
-				<sonar.host.url>
-					http://104.215.158.154:9000
-				</sonar.host.url>
-				<sonar.login>90903e93f9e6f0e73b5352382e7c51e0a18bfa80</sonar.login>
-				<sonar.test.exclusions>**/test/**/*.*</sonar.test.exclusions>
-				<sonar.jacoco.reportPaths>
-					target/jacoco.exec
-				</sonar.jacoco.reportPaths>
-			</properties>
-		</profile>
-		<profile>
-			<id>DEV</id>
-			<properties>
-				<sonar.host.url>
-					http://104.215.158.154:9000
-				</sonar.host.url>
-				<sonar.login>90903e93f9e6f0e73b5352382e7c51e0a18bfa80</sonar.login>
-				<sonar.ws.timeout>90000</sonar.ws.timeout>
-				<sonar.test.exclusions>**/test/**/*.*</sonar.test.exclusions>
-				<sonar.jacoco.reportPaths>
-					target/jacoco.exec
-				</sonar.jacoco.reportPaths>
-			</properties>
-		</profile>
-	</profiles>
--->
-
 	<build>
 			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven.surefire.plugin.version}</version>
+					<configuration>
+						<skipTests>${skipTests}</skipTests>
+						<skip>false</skip>
+						<argLine>
+							${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
+						</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${maven.jacoco.version}</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>report</id>
+							<phase>prepare-package</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -414,67 +419,6 @@
 						</archive>
 					</configuration>
 				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>${maven.surefire.plugin.version}</version>
-					<configuration>
-						<skip>false</skip>
-						<useFile>false</useFile>
-						<excludes>
-							<exclude>**/*IntegrationTest.java</exclude>
-						</excludes>
-						<argLine>
-							--illegal-access=permit
-						</argLine>						
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.jacoco</groupId>
-					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>${maven.jacoco.plugin.version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.sonarsource.scanner.maven</groupId>
-					<artifactId>sonar-maven-plugin</artifactId>
-					<version>${maven.sonar.plugin.version}</version>
-					   <executions>
-							<execution>
-								<phase>verify</phase>
-								<goals>
-									<goal>sonar</goal>
-								</goals>
-							</execution>
-					   </executions>
-				</plugin>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<configuration>
-					<append>true</append>
-				</configuration>
-				<executions>
-					<execution>
-						<id>agent-for-ut</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>agent-for-it</id>
-						<goals>
-							<goal>prepare-agent-integration</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>jacoco-site</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -486,4 +430,35 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>sonar</id>
+			<properties>
+				<sonar.sources>.</sonar.sources>
+				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
+				<sonar.exclusions>${sonar.coverage.exclusions}</sonar.exclusions>
+				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+			</properties>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonarsource.scanner.maven</groupId>
+						<artifactId>sonar-maven-plugin</artifactId>
+						<version>${maven.sonar.plugin.version}</version>
+						<executions>
+							<execution>
+								<phase>verify</phase>
+								<goals>
+									<goal>sonar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
